--- a/splitImage/index.html
+++ b/splitImage/index.html
@@ -11,12 +11,12 @@
     <div class="side left" onmouseover="onleft()" onmouseleave="onleave()">
       <!---->
       <h1>One Piece</h1>
-      <button>Buy Now</button>
+      <button onclick="location.href='https://www.viz.com/shonenjump/chapters/one-piece?locale=en'">Buy Now</button>
     </div>
     <div class="side right" onmouseover="onright()" onmouseleave="onleave()">
       <!---->
       <h1>Naruto</h1>
-      <button>Buy Now</button>
+      <button onclick="location.href='https://www.viz.com/shonenjump/chapters/naruto?locale=en'">Buy Now</button>
     </div>
 
     <script src="index.js"></script>
