--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -9,27 +9,27 @@
   </head>
   <body>
     <div class="container">
-      <div class="box tran">
+      <div class="box ">
         <p>In which European city would you find Orly airport?</p>
         <button>V</button>
         <div class="ans">Paris</div>
       </div>
-      <div class="box tran">
+      <div class="box ">
         <p>which author wrote the 'Winnie-the-Pooh' Books?</p>
         <button>V</button>
         <div class="ans">A.A.Milne</div>
       </div>
-      <div class="box tran">
+      <div class="box ">
         <p>Which Dutch aritist painted "Girl with a Pearl Earring"?</p>
         <button>V</button>
         <div class="ans">Vermeer</div>
       </div>
-      <div class="box tran">
+      <div class="box ">
         <p>Which is the loudest animal on Earth?</p>
         <button>V</button>
         <div class="ans">The sperm whale</div>
       </div>
-      <div class="box tran">
+      <div class="box ">
         <p>Which was the first toy to be advertised on television ?</p>
         <button>V</button>
         <div class="ans">Mr.Potato Head</div>
